--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_HEALTH" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SYSTEM_EXEMPTED" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
@@ -21,6 +23,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SaglikliYasam"
         android:usesCleartextTraffic="true"
+        android:extractNativeLibs="true"
+        android:hasFragileUserData="false"
         tools:targetApi="31">
 
         <activity
@@ -61,8 +65,9 @@
 
         <service
             android:name=".StepCounterService"
+            android:enabled="true"
             android:exported="false"
-            android:foregroundServiceType="health" />
+            android:foregroundServiceType="dataSync" />
     </application>
 
 </manifest>
